SHARE WITH TELOS UK IN RELATION TO BLOG ARTICLE This repository is referenced in a blog article being written in conjunction with Telos UK. Hence committing the last state so that it can be shared with Telos UK for visibility.

--- a/.env
+++ b/.env
@@ -1,1 +1,15 @@
-VER=2.0.11
+#!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+# SETTING A VALUE FOR THE VER ENVIRONMENT VARIABLE IS MANDATORY
+#!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+
+# Our Docker Compose services use the VER environment variable to ensure a
+# consistent EOSIO version to work with. The easiest thing to do is define it
+# here, as this will be used by all Docker Compose commands.
+
+# Given this, and that there is nothing sensitive about this information, we
+# commit this file to the repository. If you want to use a different version of
+# EOSIO, you can edit this file accordingly or use any other means to define
+# "Environment variables in Compose":
+# https://docs.docker.com/compose/environment-variables/
+
+VER=2.0.12
