COMMIT REFERENCED IN BLOG POST Changes as follows:  - Allow defaults for services to be overridden  - Explicitly set compose project name  - Provide instructions for overriding the EOSIO version  - Add the data service  - Extensive amendments to README

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
+COMPOSE_PROJECT_NAME=telos-eosio
 #!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
 # SETTING A VALUE FOR THE VER ENVIRONMENT VARIABLE IS MANDATORY
 #!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
