ADD MULTISIG REVIEW SERVICE Added multisig review wrapper to cleos as a separate service. Still WIP but it was used as is to review a specific multisig.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -90,6 +90,17 @@ services:
     volumes:
       - data:/data
 
+  multisig:
+
+    build:
+      context: .
+      args:
+        - VER=${VER}
+
+    image: varilink/eosio:${VER}
+
+    entrypoint: multisig.sh
+
 volumes:
   # nodeos data directory, Docker Compose will auto name this as eosio_data
   data:
